# TheRock

./: .gitmodules  .pre-commit-config.yaml  BUILD_TOPOLOGY.toml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  RELEASES.md  requirements-test.txt  requirements.txt  version.json
.github/: CODEOWNERS  dependabot.yml
.github/actions/setup_test_environment/: action.yml
.github/workflows/: artifacts.yml  build_linux_jax_wheels.yml  build_native_linux_packages.yml  build_portable_linux_artifacts.yml  build_portable_linux_python_packages.yml  build_portable_linux_pytorch_wheels.yml  build_portable_linux_pytorch_wheels_ci.yml  build_windows_artifacts.yml  build_windows_python_packages.yml  build_windows_pytorch_wheels.yml  ci.yml  ci_asan.yml  ci_linux.yml  ci_nightly.yml  ci_tsan.yml  ci_windows.yml  copy_release.yml  hip_tagging_automation.yml  multi_arch_build_portable_linux.yml  multi_arch_build_portable_linux_artifacts.yml  multi_arch_ci.yml  multi_arch_ci_linux.yml  portable_linux_package_matrix.yml  pre-commit.yml  publish_dockerfile.yml  publish_no_rocm_image_ubuntu24_04.yml  publish_no_rocm_image_ubuntu24_04_rocgdb.yml  release_portable_linux_packages.yml  release_portable_linux_pytorch_wheels.yml  release_windows_packages.yml  release_windows_pytorch_wheels.yml  setup.yml  test_artifacts.yml  test_component.yml  test_external_repo_integration.yml  test_jax_dockerfile.yml  test_linux_jax_wheels.yml  test_pytorch_wheels.yml  test_rocm_wheels.yml  test_sanity_check.yml  (+4 more)
base/: CMakeLists.txt  artifact.toml
base/aux-overlay/: CMakeLists.txt
build_tools/: analyze_build_times.py  artifact_manager.py  build_python_packages.py  bump_submodules.py  fetch_artifacts.py  fetch_repo.py  fetch_sources.py  find_artifacts_for_commit.py  find_latest_artifacts.py  install_rocm_from_artifacts.py  linux_portable_build.py  patch_linux_so.py  patch_rocm_libraries.py  print_driver_gpu_info.py  provision_machine.py  report_build_time_template.html  resource_info.py  setup_venv.py
build_tools/_therock_utils/: build_topology.py
build_tools/detail/: linux_portable_build_in_container.sh
build_tools/github_actions/: amdgpu_family_matrix.py  build_configure.py  cleanup_processes.ps1  compute_jax_package_version.py  configure_ci.py  configure_ci_path_filters.py  detect_external_repo_config.py  external_repo_project_maps.py  fetch_test_configurations.py  generate_pytorch_manifest.py  github_actions_utils.py  hip_tagging_helper.py  new_amdgpu_family_matrix.py  post_build_upload.py  upload_python_packages.py  upload_pytorch_manifest.py  upload_test_report_script.py  write_jax_versions.py  write_torch_versions.py
build_tools/github_actions/benchmarks/: README.md  benchmark_test_matrix.py
build_tools/github_actions/benchmarks/scripts/: benchmark_base.py  test_rocrand_benchmark.py
build_tools/github_actions/benchmarks/utils/: README.md
build_tools/github_actions/benchmarks/utils/config/: config_validator.py
build_tools/github_actions/test_executable_scripts/: test_aqlprofile.py  test_hipblas.py  test_hipblaslt.py  test_hipblaslt_plugin.py  test_hipdnn.py  test_hipdnn_samples.py  test_hipsparse.py  test_hiptests.py  test_miopen.py  test_origami.py  test_rccl.py  test_rocblas.py  test_rocprim.py  test_rocprofiler_systems.py  test_rocr-debug-agent.py  test_rocthrust.py  test_rocwmma.py
build_tools/github_actions/tests/: configure_ci_path_filters_test.py  configure_ci_test.py  configure_target_run_test.py  fetch_test_configurations_test.py  generate_pytorch_manifest_test.py  github_actions_utils_test.py  test_configure_ci_external.py  test_detect_external_repo_config.py  test_external_repo_project_maps.py  workflow_dispatch_inputs_test.py
build_tools/packaging/: download_prerelease_packages.py  promote_from_rc_to_final.py  requirements.txt  upload_release_packages.py
build_tools/packaging/linux/: build_package.py  package.json  packaging_summary.py  packaging_utils.py  upload_package_repo.py
build_tools/packaging/linux/template/: rpm_specfile.j2
build_tools/tests/: artifact_manager_tool_test.py  fetch_artifacts_test.py  fileset_tool_test.py  find_artifacts_for_commit_test.py  find_latest_artifacts_test.py  setup_venv_test.py
cmake/: therock_amdgpu_targets.cmake  therock_artifacts.cmake  therock_compiler_config.cmake  therock_detect_python_versions.cmake  therock_globals.cmake  therock_sanitizers.cmake  therock_subproject.cmake  therock_subproject_dep_provider.cmake
comm-libs/: CMakeLists.txt
compiler/: CMakeLists.txt  pre_hook_amd-comgr.cmake  pre_hook_amd-llvm.cmake
core/: CMakeLists.txt  artifact-core-amdsmi.toml  artifact-core-ocl.toml  artifact-core-rocrtst.toml
debug-tools/: CMakeLists.txt  README.md  artifact-rocgdb.toml
debug-tools/rocgdb/: CMakeLists.txt  rocgdb
dockerfiles/: README.md  build_manylinux_rccl_x86_64.Dockerfile  build_manylinux_x86_64.Dockerfile  install_sccache.sh
docs/development/: README.md  artifacts.md  ci_behavior_manipulation.md  dependencies.md  installing_artifacts.md  sanitizers.md  test_environment_reproduction.md  test_filtering.md  windows_support.md
docs/packaging/: python_packaging.md  versioning.md
docs/rfcs/: RFC0003-Build-Tree-Normalization.md  RFC0009-OS-Packaging-Requirements.md
examples/: CMakeLists.txt
external-builds/jax/: requirements-jax.txt
external-builds/pytorch/: README.md  build_prod_wheels.py  pytorch_apex_repo.py  pytorch_triton_repo.py  pytorch_utils.py  repo_management.py  run_pytorch_tests.py
external-builds/pytorch/skip_tests/: generic.py  pytorch_2.10.py  pytorch_2.11.py  pytorch_2.8.py  pytorch_2.9.py
external-builds/uccl/: build_prod_wheels.py  repo_management.py
iree-libs/: CMakeLists.txt
math-libs/: CMakeLists.txt
math-libs/BLAS/: CMakeLists.txt  artifact-blas.toml  pre_hook_hipSPARSE.cmake  pre_hook_rocSPARSE.cmake
ml-libs/: CMakeLists.txt  artifact-hipblaslt-plugin.toml  artifact-hipdnn-samples.toml  artifact-hipdnn.toml  post_hook_hipBLASLt_plugin.cmake
profiler/: CMakeLists.txt  artifact-rocprofiler-systems.toml
tests/: test_rocm_sanity.py
(+13 files in other folders)
